--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,260 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --color-bg-dark: #3a3a3a;
+    --color-bg-black: #111111;
+    --color-white: #fefefe;
+    --color-primary: #7634d8;
+    --color-danger: rgb(249, 84, 84);
 }
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    display: grid;
+    place-items: center;
+    color: var(--color-white);
+    background: #ccc;
+    line-height: 1.5;
+}
+
+.btn {
+    background: var(--color-bg-dark);
+    border-radius: 0.8rem;
+    padding: 0.8rem;
+    font-size: 1.5rem;
+    color: var(--color-white);
+    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
+    transition: all 300ms ease;
+    margin-top: 10px;
+}
+
+.btn.lg {
+    padding: 0.8rem 1.5rem;
+    font-size: 1.2rem;
+    box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.4);
+}
+
+.btn.danger {
+    background: var(--color-danger);
+}
+
+.btn.primary {
+    background: var(--color-primary);
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: none;
+}
+
+.btn.sm{
+    
+    font-size: 1rem;
+    margin-right: 0px;
+}
+
+
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+h2,  h4 {
+    font-weight: 500;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+
+
+
+
+
+/* NOTES PAGE */
+.notes__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1.6rem 1.5rem;
+    background: grey;
+    z-index: 9;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    
+}
+
+
+.notes__header input {
+    padding: 0.7rem 1rem;
+    background: gray;
+    border: 1px solid var(--color-bg-dark);
+    border-radius: 0.6rem;
+    color: var(--color-white);
+    font-size: 1.1rem;
+    width: 100%;
+    margin-right: 1.5rem;
+    margin-top: 5px;
+    
+}
+
+.notes__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
+}
+
+.empty__notes {
+    position: absolute;
+    left: 45%;
+    top: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.noted {
+    background: var(--color-bg-dark);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease;
+    color: var(--color-white);
+}
+
+.all{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.noted p {
+    font-size: 0.8rem;
+    opacity: 0.85;
+}
+
+.btn.add__btn {
+    position: fixed;
+    bottom: 38rem;
+    right: 20rem;
+    padding: 1rem;
+}
+
+
+
+
+
+/* CREATE NOTE & EDIT NOTE PAGE */
+.create-note__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.create-note__form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.create-note__form input, .create-note__form textarea {
+    width: 100%;
+    padding: 0.5rem 1rem;
+    background: transparent;
+    border-radius: 0.2rem;
+    font-size: 1.1rem;
+    color: black;
+}
+
+.create-note__form input {
+    font-size: 2rem;
+}
+
+
+/* MEDIA QUERIES FOR PHONES */
+@media screen and (max-width: 700px) {
+    #app {
+        width: 100vw;
+        height: 100vh;
+        padding: 2rem 1rem;
+    }
+
+    .notes__header {
+        width: 100%;
+        padding: 2rem 1rem;
+        position: fixed;
+        top: 0px;
+        left: 0;
+    }
+
+    .notes__container {
+        margin-top: 5rem;
+        gap: 1rem;
+    }
+    .notes__header{
+        width: 300px;
+        height: 100px;
+    }
+
+   
+}
+
+@media screen and (max-width:1400px){
+    .btn.add__btn {
+        padding: 1.5rem;
+        font-size: 1.5rem;
+        bottom: 6%;
+        right: 2rem;
+    }
+}
+    
+
+
+.app {
+    height: 1000px;
+    width: 700px;
+    padding: 2rem 1.6rem;
+    overflow-y: scroll;
+    position: relative;
+   
+
+    
+}
+
+.dark-mode {
+	background-color: black;
+    min-height: 100vh;
+   
+   
+   
+}
+
+.dark-mode h1 {
+	color: white;
+}
+
+.save {
+	background-color: #e1e1e1;
+	border: none;
+	border-radius: 15px;
+	padding: 5px 10px 5px 10px;
+
+}
+
+.save:hover {
+	background-color: #ededed;
+	cursor: pointer;
+}
+
